--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ button {
 /* Common sections styles */
 .section-title {
   font-size: 36px;
-  line-height: 1.1;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
@@ -29,6 +29,7 @@ button {
 .benefits-title,
 .team-title,
 .portfolio-title {
+  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -51,10 +52,10 @@ button {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
-}
-.page-logo > span {
   color: #4d5ae5;
+}
+.logo-decor-header {
+  color: #2e2f42;
 }
 .menu-link {
   font-weight: 500;
@@ -67,8 +68,10 @@ button {
 .menu-link:focus {
   color: #404bbf;
 }
-.address-link {
+.address {
   font-style: normal;
+}
+.address-link {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -106,8 +109,14 @@ button {
 /* /Hero section styles */
 
 /* Team section styles */
+.team {
+  background-color: #f4f4fd;
+}
 .team-title {
   text-align: center;
+}
+.team-item {
+  background-color: #ffffff;
 }
 .team-text {
   text-align: center;
@@ -115,9 +124,10 @@ button {
 /* /Team section styles */
 
 /* Footer styles */
-.page-logo.logo-footer {
+.logo-decor-footer {
   color: #f4f4fd;
 }
+
 .page-footer {
   background-color: #2e2f42;
 }
@@ -127,3 +137,4 @@ button {
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
+/* /Footer styles */
